# Hw09

./: README.md  main.py  pyproject.toml
test_spyder/: quotes.json  result.csv
test_spyder/test_spyder/: settings.py
test_spyder/test_spyder/spiders/: authors.py
