[tool.poetry]
name = "hw-09"
version = "0.1.0"
description = "ok"
authors = ["swg"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw_09"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
